{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 146,
  "lineage": "2c5b9983-e751-3b62-bbbb-36435054b9cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_for_NG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09005f620312eb181",
            "associate_with_private_ip": "10.0.0.4",
            "domain": "vpc",
            "id": "eipalloc-09005f620312eb181",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-202-70-108.compute-1.amazonaws.com",
            "public_ip": "52.202.70.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.finalpro-igw",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "finalpro-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:internet-gateway/igw-07d869b0e7efa09ce",
            "id": "igw-07d869b0e7efa09ce",
            "owner_id": "323631720448",
            "tags": {
              "Name": "finalpro-igw"
            },
            "tags_all": {
              "Name": "finalpro-igw"
            },
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front-facing-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323631720448:loadbalancer/app/front-facing-alb/e48499c625c5ab28",
            "arn_suffix": "app/front-facing-alb/e48499c625c5ab28",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-facing-alb-1471667764.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:323631720448:loadbalancer/app/front-facing-alb/e48499c625c5ab28",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-facing-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06debabfd7720e589"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09942832d04eb4a54"
              },
              {
                "subnet_id": "subnet-0e0e11c46417a1d55"
              }
            ],
            "subnets": [
              "subnet-09942832d04eb4a54",
              "subnet-0e0e11c46417a1d55"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0b136c7cf6ed2fcc9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.Load-Sec-Grp",
            "aws_subnet.public-sub-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323631720448:listener/app/front-facing-alb/e48499c625c5ab28/692d78ee3ca9c4f7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:323631720448:targetgroup/alb-target-grp/8f6bf3f0e0e9ca85",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323631720448:listener/app/front-facing-alb/e48499c625c5ab28/692d78ee3ca9c4f7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:323631720448:loadbalancer/app/front-facing-alb/e48499c625c5ab28",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front-facing-alb",
            "aws_lb_target_group.alb-target-grp",
            "aws_security_group.Load-Sec-Grp",
            "aws_subnet.public-sub-1",
            "aws_subnet.public-sub-2",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:323631720448:targetgroup/alb-target-grp/8f6bf3f0e0e9ca85",
            "arn_suffix": "targetgroup/alb-target-grp/8f6bf3f0e0e9ca85",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:323631720448:targetgroup/alb-target-grp/8f6bf3f0e0e9ca85",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "finalpro-Nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09005f620312eb181",
            "connectivity_type": "public",
            "id": "nat-0bc02d5a27d91e25f",
            "network_interface_id": "eni-000984c1627b7123a",
            "private_ip": "10.0.1.224",
            "public_ip": "52.202.70.108",
            "subnet_id": "subnet-0e0e11c46417a1d55"
          },
          "dependencies": [
            "aws_eip.EIP_for_NG",
            "aws_internet_gateway.finalpro-igw",
            "aws_subnet.public-sub-1",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07d869b0e7efa09ce",
            "id": "r-rtb-0b509755574dde9f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b509755574dde9f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.finalpro-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:route-table/rtb-020a12cd010d5600c",
            "id": "rtb-020a12cd010d5600c",
            "owner_id": "323631720448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bc02d5a27d91e25f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.EIP_for_NG",
            "aws_internet_gateway.finalpro-igw",
            "aws_nat_gateway.finalpro-Nat-gateway",
            "aws_subnet.public-sub-1",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:route-table/rtb-0b509755574dde9f9",
            "id": "rtb-0b509755574dde9f9",
            "owner_id": "323631720448",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d869b0e7efa09ce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.finalpro-igw",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub1-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc087ae2c7b658cf",
            "route_table_id": "rtb-020a12cd010d5600c",
            "subnet_id": "subnet-0233b47326958150e"
          },
          "dependencies": [
            "aws_eip.EIP_for_NG",
            "aws_internet_gateway.finalpro-igw",
            "aws_nat_gateway.finalpro-Nat-gateway",
            "aws_route_table.priv-route-table",
            "aws_subnet.priv-sub-1",
            "aws_subnet.public-sub-1",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub2-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbfd09351fd56e01",
            "route_table_id": "rtb-020a12cd010d5600c",
            "subnet_id": "subnet-02568d725d736b28c"
          },
          "dependencies": [
            "aws_eip.EIP_for_NG",
            "aws_internet_gateway.finalpro-igw",
            "aws_nat_gateway.finalpro-Nat-gateway",
            "aws_route_table.priv-route-table",
            "aws_subnet.priv-sub-2",
            "aws_subnet.public-sub-1",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub1-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041ea4c985fcb296e",
            "route_table_id": "rtb-0b509755574dde9f9",
            "subnet_id": "subnet-0e0e11c46417a1d55"
          },
          "dependencies": [
            "aws_internet_gateway.finalpro-igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-sub-1",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub2-route-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07135e179034f43e2",
            "route_table_id": "rtb-0b509755574dde9f9",
            "subnet_id": "subnet-09942832d04eb4a54"
          },
          "dependencies": [
            "aws_internet_gateway.finalpro-igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-sub-2",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ECS-Sec-Grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:security-group/sg-0ce8011c47aa6b324",
            "description": "Allow traffic from ALB to Container",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce8011c47aa6b324",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06debabfd7720e589"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06debabfd7720e589"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ECS-Sec-Grp",
            "name_prefix": "",
            "owner_id": "323631720448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Load-Sec-Grp",
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Load-Sec-Grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:security-group/sg-06debabfd7720e589",
            "description": "Allow internet traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06debabfd7720e589",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Load-Sec-Grp",
            "name_prefix": "",
            "owner_id": "323631720448",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:subnet/subnet-0233b47326958150e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0233b47326958150e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323631720448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesub-1"
            },
            "tags_all": {
              "Name": "privatesub-1"
            },
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:subnet/subnet-02568d725d736b28c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02568d725d736b28c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323631720448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatesub-2"
            },
            "tags_all": {
              "Name": "privatesub-2"
            },
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:subnet/subnet-0e0e11c46417a1d55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0e11c46417a1d55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323631720448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-1"
            },
            "tags_all": {
              "Name": "public-sub-1"
            },
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:subnet/subnet-09942832d04eb4a54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09942832d04eb4a54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "323631720448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-2"
            },
            "tags_all": {
              "Name": "public-sub-2"
            },
            "vpc_id": "vpc-0b136c7cf6ed2fcc9"
          },
          "dependencies": [
            "aws_vpc.finalpro"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "finalpro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:323631720448:vpc/vpc-0b136c7cf6ed2fcc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a65f7afb6d338139",
            "default_route_table_id": "rtb-0c052aa080a990d3a",
            "default_security_group_id": "sg-08aad8587aafa864d",
            "dhcp_options_id": "dopt-0ce1b241479c23812",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b136c7cf6ed2fcc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c052aa080a990d3a",
            "owner_id": "323631720448",
            "tags": {
              "Name": "finalpro"
            },
            "tags_all": {
              "Name": "finalpro"
            }
          }
        }
      ]
    }
  ]
}